--- a/miniprogram/pages/order/order.wxml
+++ b/miniprogram/pages/order/order.wxml
@@ -4,26 +4,34 @@
   <login bindonLogin="onTapLogin"></login>
 </view>
 
-<view wx:elif="{{orderList.length > 0}}">
+<view class="order-empty" wx:elif="{{orderList.length === 0}}">
+  <image class="empty-image" src="/images/order.png"></image>
+  <view class="empty-text">You don't have any order yet.</view>
+</view>
+
+<view wx:else>
+
   <view class="order-head">
     <image class="order-head-line" src="/images/line-black.png"></image>
     <view class="order-head-text">Completed</view>
   </view>
-  <view wx:for="{{orderList}}" wx:for-index="bindex" wx:for-item="block" wx:key="id" class="order-block">
-    <view wx:for="{{block.list}}" wx:key="id" class="order-card">
+
+  <view class="order-block" wx:for="{{orderList}}" wx:for-item="block" wx:key="id">
+
+    <view class="order-card" wx:for="{{block.list}}" wx:key="name">
       <image class="order-image" mode="widthFix" src="{{item.image}}"></image>
+
       <view class="order-info">
         <view class="order-name">{{item.name}}</view>
         <view class="order-price">$ {{item.price}}</view>
       </view>
+
       <view class="order-opr">
         <view class="order-btn">Reviews</view>
         <view class="order-count">x{{item.count}}</view>
       </view>
+
     </view>
+
   </view>
-</view>
-<view class="order-empty" wx:else>
-  <image class="empty-image" src="/images/order.png"></image>
-  <view class="empty-text">you don't have any order yet</view>
 </view>
