--- a/miniprogram/pages/order/order.wxss
+++ b/miniprogram/pages/order/order.wxss
@@ -1,4 +1,29 @@
 /* pages/order/order.wxss */
+.order-empty {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 37rpx 27rpx;
+  height: 431rpx;
+  background: #FFFFFF;
+  box-shadow: 0 2rpx 13rpx 5rpx rgba(0, 0, 0, 0.02);
+  border-radius: 13rpx;
+}
+
+.empty-image {
+  margin-bottom: 29rpx;
+  width: 90rpx;
+  height: 90rpx;
+  opacity: 0.4;
+}
+
+.empty-text {
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: rgba(139, 139, 139, 0.8);
+}
+
 .order-head {
   display: flex;
   align-items: center;
@@ -27,10 +52,10 @@
 .order-card {
   display: flex;
   align-items: center;
-  margin-left: 19rpx;
-  margin-right: 23rpx;
+  margin-left: 20rpx;
+  margin-right: 20rpx;
   height: 200rpx;
-  border-bottom: 1px solid rgba(151, 151, 151, 0.2);
+  border-bottom: 1rpx solid rgba(151, 151, 151, 0.2);
 }
 
 .order-card:last-child {
@@ -84,29 +109,4 @@
   line-height: 40rpx;
   font-weight: bold;
   text-align: right;
-}
-
-.order-empty {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 37rpx 27rpx;
-  height: 431rpx;
-  background: #FFFFFF;
-  box-shadow: 0 2rpx 13rpx 5rpx rgba(0, 0, 0, 0.02);
-  border-radius: 13rpx;
-}
-
-.empty-image {
-  margin-bottom: 29rpx;
-  width: 90rpx;
-  height: 90rpx;
-  opacity: 0.4;
-}
-
-.empty-text {
-  font-size: 28rpx;
-  line-height: 40rpx;
-  color: rgba(139, 139, 139, 0.8);
 }
