Extract login to a component and use it on me and order page

--- a/miniprogram/pages/order/order.wxml
+++ b/miniprogram/pages/order/order.wxml
@@ -1,2 +1,7 @@
 <!--pages/order/order.wxml-->
-<text>pages/order/order.wxml</text>
+<view wx:if="{{!userInfo}}">
+  <login bindonLogin="onTapLogin"></login>
+</view>
+<view wx:else>
+  <text>pages/order/order.wxml</text>
+</view>
