optimize the viariable name and the logic for products selecting

--- a/miniprogram/pages/cart/cart.wxml
+++ b/miniprogram/pages/cart/cart.wxml
@@ -14,7 +14,7 @@
 
   <view class="cart-top">
     <view class="cart-total">
-      <view class="cart-check-wrapper white {{isSelectAllChecked ? 'check' : ''}}">
+      <view class="cart-check-wrapper white {{isSelectAllChecked ? 'check' : ''}}" bindtap="onTapCheck" data-id="selectAll">
         <image class="cart-check" src="/images/check.png" wx:if="{{isSelectAllChecked}}"></image>
       </view>
       <view class="cart-total-text">Select All</view>
@@ -24,7 +24,7 @@
 
   <scroll-view class="product-list" scroll-y scroll-with-animation enable-back-to-top>
     <view class="product-card" wx:for="{{cartList}}" wx:key="productId">
-      <view class="cart-check-wrapper {{cartCheckMap[item.productId] ? 'check' : ''}}">
+      <view class="cart-check-wrapper {{cartCheckMap[item.productId] ? 'check' : ''}}" bindtap="onTapCheck" data-id="{{item.productId}}">
         <image class="cart-check" src="/images/check.png" wx:if="{{cartCheckMap[item.productId]}}"></image>
       </view>
       <image class="product-img" mode="aspectFit" src="{{item.image}}"></image>
@@ -43,7 +43,7 @@
 
   <view class="cart-checkout">
     <view class="cart-total">
-      <view class="cart-check-wrapper {{isSelectAllChecked ? 'check' : ''}}">
+      <view class="cart-check-wrapper {{isSelectAllChecked ? 'check' : ''}}" bindtap="onTapCheck" data-id="selectAll">
         <image class="cart-check" src="/images/check.png" wx:if="{{isSelectAllChecked}}"></image>
       </view>
       <view class="cart-total-text">Select All</view>
