Cart Page with adjusting product count functionaliy

--- a/miniprogram/pages/cart/cart.wxml
+++ b/miniprogram/pages/cart/cart.wxml
@@ -19,7 +19,7 @@
       </view>
       <view class="cart-total-text">Select All</view>
     </view>
-    <view class="cart-edit">{{isCartEdit ? 'Done' : 'Edit'}}</view>
+    <view class="cart-edit" bindtap='onTapEditCart'>{{isCartEdit ? 'Done' : 'Edit'}}</view>
   </view>
 
   <scroll-view class="product-list" scroll-y scroll-with-animation enable-back-to-top>
@@ -32,9 +32,9 @@
         <view class="product-name">{{item.name}}</view>
         <view class="product-price">$ {{item.price}}</view>
         <view class="product-count-edit" wx:if="{{isCartEdit}}">
-          <view class="count-minus">-</view>
+          <view class="count-minus" bindtap="adjustCartProductCount" data-type="minus" data-id="{{item.productId}}">-</view>
           <view class="count-now">{{item.count}}</view>
-          <view class="count-add">+</view>
+          <view class="count-add" bindtap="adjustCartProductCount" data-type="add" data-id="{{item.productId}}">+</view>
         </view>
         <view class="product-count" wx:else>x {{item.count}}</view>
       </view>
