--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -33,5 +33,5 @@
 
 <view class="opr-cnt">
   <view class="opr-cart">Add to Cart</view>
-  <view class="opr-buy">Buy it Now</view>
+  <view class="opr-buy" bindtap="buy">Buy it Now</view>
 </view>
